basic navigation aand beggining of contact, products, download, catalog and prices pages

--- a/public/parts/mainMenuSlider.ejs
+++ b/public/parts/mainMenuSlider.ejs
@@ -1,11 +1,11 @@
 <div class="wrapper mainMenuSlider">
 	<figure>
-		<img class="fullwidth" src="images/banner.png">
+		<img class="fullwidth" src="<%=render.mainBanner%>">
 	</figure>
-	<!--
+	
 	<div class="buttons">
 		<button class="arrow prev"><</button>
 		<button class="arrow next">></button>
 	</div>
-	-->
+
 </div>
