--- a/public/parts/mainMenuSliderMobile.ejs
+++ b/public/parts/mainMenuSliderMobile.ejs
@@ -1,6 +1,6 @@
 <div class="wrapper mainMenuSlider">
 	<figure>
-		<img class="fullwidth" src="images/banner.png">
+		<img class="fullwidth" src="/images/banner.png">
 	</figure>
 	<!--
 	<div class="buttons">
