--- a/public/parts/mainMenu.ejs
+++ b/public/parts/mainMenu.ejs
@@ -3,7 +3,7 @@
 		<nav class="navbar" role="navigation" aria-label="main navigation">
 			<div class="navbar-brand">
 				<a class="navbar-item" href="http://powtran-polska.pl">
-					<img src="images/logo.jpg" width="250" height="100">
+					<img src="/images/logo.jpg" width="250" height="100">
 				</a>
 
 				<a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -18,34 +18,34 @@
 				</div>
 
 				<div class="navbar-end">
-					<a class="navbar-item active">
+					<a class="navbar-item active" href="/">
 						Strona główna
 					</a>
 
-					<a class="navbar-item">
+					<a class="navbar-item" href="/contact">
 						Kontakt
 					</a>
 
-					<a class="navbar-item">
+					<a class="navbar-item" href="#">
 						Aktualności
 					</a>
 
 					<div class="navbar-item has-dropdown is-hoverable">
-						<a class="navbar-link">
+						<a class="navbar-link" href="/products">
 						Wyroby
 						</a>
 
 						<div class="navbar-dropdown">
-							<a class="navbar-item">
+							<a class="navbar-item" href="/catalog">
 								Katalog
 							</a>
-							<a class="navbar-item">
+							<a class="navbar-item" href="/prices">
 								Cennik
 							</a>
 							
 							<hr class="navbar-divider">
 							
-							<a class="navbar-item">
+							<a class="navbar-item" href="/download">
 								Do pobrania	
 							</a>
 
