main page 50%, contact 100%, catalog at the beginnign

--- a/public/parts/head.ejs
+++ b/public/parts/head.ejs
@@ -2,5 +2,6 @@
 <title>Powtran-Polska</title>
 <link rel='stylesheet' href='/stylesheets/style.css' />
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" />
+<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
