--- a/public/parts/index/mailer.ejs
+++ b/public/parts/index/mailer.ejs
@@ -1,8 +1,10 @@
 <div class="wrapper mailer">
 	<div class="tile is-parent">
 		<div class="tile is-child">
-			<h1 class="title">Skontaktuj się z nami</h1>
-			<!--<h2 class="subtitle">Subtitle</h2>-->
+			<header class="title-container">
+				<h1 class="title">Skontaktuj się z nami</h1>
+				<h2 class="subtitle">Skorzstaj z formularza...</h2>
+			</header>
 		</div>
 	</div>
 
@@ -14,9 +16,9 @@
 				</figure>
 			</div>
 		</div>
-		<div class="tile is-parent" style="margin-left: -50%; z-index: 10">
+		<div class="tile is-parent moved-50p-left-mobile" >
 			<div class="tile is-child">
-				<div class="news">
+				<div class="tile-content moved-50p-left-mobile-content">
 					<form>
 						<div class="field">
 							<label class="label">Imię</label>
@@ -62,7 +64,7 @@
 						</div>
 						<div class="field is-grouped">
 							<div class="control">
-								<button class="button is-link">Wyślij</button>
+								<button class="button is-primary">Wyślij</button>
 							</div>
 							<div class="control">
 								<button class="button is-text">Anuluj</button>
