--- a/public/parts/index/whyus.ejs
+++ b/public/parts/index/whyus.ejs
@@ -2,8 +2,10 @@
 <div class="wrapper whyus">
 	<div class="tile is-parent">
 		<div class="tile is-child">
-			<h1 class="title">Dlaczgo my?</h1>
-			<!--<h2 class="subtitle">Subtitle</h2>-->
+			<header class="title-container">
+				<h1 class="title">Dlaczgo my?</h1>
+				<h2 class="subtitle">Kilka słów o nas...</h2>
+			</head>
 		</div>
 	</div>
 
@@ -15,9 +17,9 @@
 				</figure>
 			</div>
 		</div>
-		<div class="tile is-parent" style="margin-left: -50%; z-index: 10">
+		<div class="tile is-parent moved-50p-left-mobile">
 			<div class="tile is-child">
-				<div class="news">
+				<div class="tile-content moved-50p-left-mobile-content">
 					<p>
 					Systematycznie rozwijana i unowocześniana oferta oraz rozwijająca się sieć dystrybucyjna, pozwalają oferować wysokiej jakości urządzenia, charakteryzujące się wysokim zaawansowaniem technicznym oraz niezawodnym działaniem w długim okresie eksploatacji. 
 			Tysiące sprzedanych falowników i innych urządzeń oraz zadowolenie setek klientów potwierdzają wysoką jakość oferowanych urządzeń i pozwalają umacniać pozycję marki POWTRAN na polskim rynku.
