--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -1,6 +1,9 @@
 
+//$red: #D62929
+//$primary: $red
 
 $primary: #ff0d01
+$red: $primary
 
 
 @import "../../node_modules/bulma/bulma.sass"
@@ -8,4 +11,9 @@ $primary: #ff0d01
 @import "mainMenu.sass"
 @import "buttons.sass"
 @import "news.sass"
+@import "card.sass"
+@import "border.sass"
+
+@import "index/whyus.sass"
+@import "index/about.sass"
 
