--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,11 +20,11 @@
 			</header>
 		</div><!--ancestor-->
 		
-		<div class="has-background-white">
+		<div class="has-background-white page">
 			<div class="container">
 				<main class="is-ancestor tile is-vertical">
 					<div class="tile">
-						<div class="tile is-8 is-parent">
+						<div class="tile is-8">
 							<% include ../public/parts/index/about %>
 						</div>
 						<div class="tile is-4 is-parent">
@@ -37,7 +37,7 @@
 			</div>
 		</div>
 	
-		<div class="has-background-grey-lighter">
+		<div class="has-background-grey-lighter page">
 			<div class="container">
 				<main class="is-ancestor tile is-vertical">
 					<% include ../public/parts/index/productSlider %>
@@ -46,7 +46,7 @@
 		</div>
 	
 
-		<div class="has-background-white">
+		<div class="has-background-white page">
 			<div class="container">
 				<main class="is-ancestor tile is-vertical">
 					<% include ../public/parts/index/whyus %>
@@ -54,7 +54,7 @@
 			</div>
 		</div>
 
-		<div class="has-background-grey-lighter">	
+		<div class="has-background-grey-lighter page">	
 			<div class="container">
 				<main class="is-ancestor tile is-vertical">
 					<% include ../public/parts/index/mailer %>
