--- a/views/products.ejs
+++ b/views/products.ejs
@@ -25,29 +25,41 @@
 					
 					<div class="tile is-parent">
 						<div class="tile is-child">
-							<a href="catalog">
-								<h1 class="title">Katalog</h1>
-								<figure class="image">
-									<img src="#"/>
-								</figure>
-							</a>
-						</div>		
-						<div class="tile is-child">
-							<a href="/prices">
-								<h1 class="title">Cennik</h1>
-								<figure class="image">
-									<img src="#"/>
-								</figure>
-							</a>
-						</div>	
-						<div class="tile is-child">
-							<a href="/download">	
-								<h1 class="title">Pliki do pobrania</h1>
-								<figure class="image">
-									<img src="#"/>
-								</figure>
-							</a>
-						</div>		
+							<div class="columns is-multiline">
+
+								<a href="catalog" class="column is-flex is-3 is-half-tablet">
+									<div class="card">
+										<figure class="image">
+											<img src="/images/inverter2.png"/>
+										</figure>
+										<h1 class="title">Katalog</h1>
+										<h1 class="subtitle">nasza oferta...</h1>
+										<div class="arrow">></div>
+									</div>
+								</a>
+								<a href="/prices" class="column is-flex is-3 is-half-tablet">
+									<div class="card">
+										<figure class="image">
+											<img src="/images/inverter2.png"/>
+										</figure>
+										<h1 class="title">Cennik</h1>
+										<h1 class="subtitle"></h1>
+										<div class="arrow">></div>
+									</div>
+								</a>
+								
+								<a href="/download" class="column is-flex is-3 is-half-tablet">	
+									<div class="card">
+										<figure class="image">
+											<img src="/images/inverter2.png"/>
+										</figure>
+										<h1 class="title">Pobierz</h1>
+										<h1 class="subtitle">katalogi, instrukcje...</h1>
+										<div class="arrow">></div>
+									</div>
+								</a>
+							</div>
+						</div>
 					</div>
 				
 				</div>
