--- a/public/parts/mainMenu.ejs
+++ b/public/parts/mainMenu.ejs
@@ -32,7 +32,7 @@
 
 					<div class="navbar-item has-dropdown is-hoverable">
 						<a class="navbar-link" href="/products">
-						Wyroby
+						Oferta
 						</a>
 
 						<div class="navbar-dropdown">
