--- a/public/stylesheets/motive.sass
+++ b/public/stylesheets/motive.sass
@@ -1,5 +1,6 @@
 body
-	font: 16px "Lucida Grande", Helvetica, Arial, sans-serif
+	font-size: 16px
+	font-family: 'Lato', sans-serif;
 
 a
 	color: #00B7FF
@@ -13,6 +14,61 @@ a
 	padding-top: 10px
 	padding-bottom: 10px
 
+.important
+	color: $black
+	font-weight: $strong-weight
+	
+	&-red
+		font-weight: $strong-weight
+		color: $red
+
 figure
 	img.fullwidth
 		width: 100%
+
+@include desktop
+	.moved-50p-left-mobile
+		margin-left: -50%
+		z-index: 10
+		position: relative
+
+		&-content
+			padding: 10px
+			background-color: $grey-light
+			position: absolute
+			top: 50%
+			right: 50%
+			transform: translate(50%, -50%)
+			width: 80%
+
+.page
+	margin-bottom: 25px
+
+.title
+	font-style: italic
+
+@include mobile
+	.tile-content
+			padding: 0.75em
+
+header.title-container
+	position: relative
+	text-align: center
+	padding: 20px 0px
+
+	&:after,&:before
+		content: '\A'
+		display: block
+		position: absolute
+		height: 5px
+		background-color: $red
+
+	&:after
+		left: 0px
+		right: 40%
+		top: 0px
+
+	&:before
+		left: 40%
+		right: 0px
+		bottom: 0px
