--- a/public/stylesheets/news.sass
+++ b/public/stylesheets/news.sass
@@ -1,2 +1,54 @@
 .news
-	background-color: $grey-light
+	overflow-y: scroll
+	padding-right: 5px
+
+	&::-webkit-scrollbar-track
+		-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3)
+		border-radius: 10px
+		background-color: #F5F5F5
+
+
+	&::-webkit-scrollbar
+		width: 12px
+		background-color: #F5F5F5
+
+
+	&::-webkit-scrollbar-thumb
+		border-radius: 10px
+		-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3)
+		background-color: $red
+
+
+	p
+		padding-top: 10px
+
+	.news-title
+		font-size: 1.2rem
+		color: $black
+		font-weight: $weight-bold
+
+	.news-subtitle
+
+	.image-container
+		background-color: $white
+		padding: 5px
+		width: 100%
+		overflow: hidden
+
+		figure
+			margin: auto
+			display: block
+			width: 128px
+			//height: 128px
+
+			img	
+				object-fit: 
+
+	.news-header-container
+		background-color: $white
+		padding: 0px 5px 
+
+	.news-container
+		max-height: 80vh 
+
+
