--- a/views/errorMessage.ejs
+++ b/views/errorMessage.ejs
@@ -4,6 +4,7 @@
     	<% include ../public/parts/head %>
 	</head>
 	<body>
+
 		<div class="tile is-ancestor is-vertical">
 			<header class="tile is-parent">
 				<div class="tile is-child">
@@ -19,31 +20,16 @@
 			</header>
 		</div><!--ancestor-->
 		
-		<div class="container">
-			<div class="tile is-ancestor has-background-grey-lighter">
-				<div class="tile is-8">
-					
-					<div class="tile is-parent is-vertical">
+		<div class="has-background-white">
+			<div class="container">
+				<main class="is-ancestor">
+					<div class="tile is-parent">
 						<div class="tile is-child">
-							<h1 class="title">Pliki do pobrania</h1>
-						</div>		
-						<div class="tile is-child tile-content">
-							<%for(let i of render.download){%>
-								<div class="download-tile">		
-									<a href="<%=i.path%>">
-										<%=i.date%> <br>
-										<%=i.name%>
-										<i class="fas fa-file-download"></i>
-									</a>
-								</div>
-							<%}%>
+							<h1>Błąd: <%=render.errorCode%></h1>
+							<%=render.errorDesc%>
 						</div>
 					</div>
-				
-				</div>
-				<div class="tile is-4">
-					<% include ../public/parts/news %>
-				</div>
+				</main>
 			</div>
 		</div>
 
