powtran-polska first run

--- a/public/parts/footer.ejs
+++ b/public/parts/footer.ejs
@@ -1,1 +1,8 @@
-footer
+<footer>
+	<div class="container">
+
+	<div class="authors">
+		Strona stworzona przez <a href="http://aplipage.pl">aplipage.pl</a>
+	</div>
+	</div>
+</footer>
