--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7024,6 +7024,9 @@ header.title-container {
     right: 0px;
     bottom: 0px; }
 
+header.title-container.small {
+  padding: 10px 0px; }
+
 .mainMenu {
   background-color: white; }
   .mainMenu .navbar-item img {
@@ -7158,6 +7161,60 @@ header.title-container {
 .has-border-top {
   border-top: 3px solid #ff0d01;
   padding-top: 7px; }
+
+.specification-table {
+  width: 100%; }
+  .specification-table tr:nth-child(odd) {
+    background-color: #dbdbdb; }
+  .specification-table td {
+    width: 50%;
+    font-weight: 700; }
+  .specification-table td:not(:first-child) {
+    color: #0a0a0a;
+    font-size: 1.25rem; }
+  .specification-table td:first-child {
+    font-size: 1.125rem; }
+
+.database-html-container h1 {
+  color: #ff0d01;
+  font-weight: 700;
+  font-size: 1.5rem; }
+
+.database-html-container p {
+  line-height: 1.5em;
+  text-align: justify; }
+
+.breadcrumb ul li {
+  font-size: 1.25rem; }
+  .breadcrumb ul li a {
+    color: inherit; }
+  .breadcrumb ul li a:hover {
+    color: #ff0d01; }
+
+.download ul li {
+  background-color: white;
+  margin-bottom: 0.5em;
+  padding: 0.5em; }
+  .download ul li .columns {
+    color: #4a4a4a;
+    text-align: center; }
+  .download ul li .columns:hover {
+    color: #ff0d01; }
+  .download ul li i {
+    font-size: 2rem; }
+
+footer {
+  background-color: #0a0a0a;
+  padding: 1.5em; }
+  footer .authors {
+    text-align: center;
+    width: 100%;
+    color: white; }
+    footer .authors a {
+      color: inherit; }
+    footer .authors a:hover {
+      color: inherit;
+      text-decoration: underline; }
 
 .about .article {
   text-align: justify;
