--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -5,6 +5,8 @@
 $primary: #ff0d01
 $red: $primary
 
+$basic-color: #4a4a4a
+
 
 @import "../../node_modules/bulma/bulma.sass"
 @import "motive.sass"
@@ -13,7 +15,16 @@ $red: $primary
 @import "news.sass"
 @import "card.sass"
 @import "border.sass"
+@import "specificationTable.sass"
+@import "databaseHtmlContainer.sass"
+@import "breadcrumb.sass"
+@import "download.sass"
+@import "footer.sass"
+
+
+
 
 @import "index/whyus.sass"
 @import "index/about.sass"
+
 
