--- a/views/catalog.ejs
+++ b/views/catalog.ejs
@@ -19,6 +19,9 @@
 			</header>
 		</div><!--ancestor-->
 		
+
+		<%include ../public/parts/breadcrumb%>
+		
 		<div class="container">
 			<div class="tile is-ancestor">
 				<div class="tile is-8">
@@ -41,7 +44,7 @@
 							</div>
 						</div>
 					</div>
-				
+			
 				</div>
 				<div class="tile is-4">
 					<% include ../public/parts/news %>
