--- a/public/parts/index/about.ejs
+++ b/public/parts/index/about.ejs
@@ -23,15 +23,7 @@
 			<div class=" has-border-right has-border-top article">
 				<p>
 					Systematycznie rozwijana i unowocześniana oferta oraz rozwijająca się sieć dystrybucyjna, pozwalają oferować <span class="important">wysokiej jakości urządzenia</span>, charakteryzujące się wysokim zaawansowaniem technicznym oraz <span class="important">niezawodnym działaniem w długim okresie eksploatacji</span>. 
-				Tysiące sprzedanych falowników i innych urządzeń oraz zadowolenie setek klientów potwierdzają wysoką jakość oferowanych urządzeń i pozwalają umacniać pozycję marki POWTRAN na polskim rynku.
-				</p>
-			</div>
-		</div>
-		<div class="tile is-child tile-content">
-			<div class="has-border-right has-border-bottom article">
-				<p>
-					Systematycznie rozwijana i unowocześniana oferta oraz rozwijająca się sieć dystrybucyjna, pozwalają oferować wysokiej jakości urządzenia, charakteryzujące się wysokim zaawansowaniem technicznym oraz niezawodnym działaniem w długim okresie eksploatacji. 
-				Tysiące sprzedanych falowników i innych urządzeń oraz <span class="important">zadowolenie setek klientów</span>/ potwierdzają <span class="important">wysoką jakość</span> oferowanych urządzeń i pozwalają umacniać pozycję marki <span class="important">POWTRAN</span> na polskim rynku.
+				Tysiące sprzedanych falowników i innych urządzeń oraz zadowolenie setek klientów potwierdzają wysoką jakość oferowanych urządzeń i pozwalają umacniać pozycję marki <span class="important">POWTRAN</span> na polskim rynku.
 				</p>
 			</div>
 		</div>
