--- a/public/parts/mainMenu.ejs
+++ b/public/parts/mainMenu.ejs
@@ -25,10 +25,11 @@
 					<a class="navbar-item" href="/contact">
 						Kontakt
 					</a>
-
+					<!--
 					<a class="navbar-item" href="#">
 						Aktualności
 					</a>
+					-->
 
 					<div class="navbar-item has-dropdown is-hoverable">
 						<a class="navbar-link" href="/products">
@@ -57,3 +58,31 @@
 
 	</div>
 </div>
+
+<script type="text/javascript">
+  document.addEventListener('DOMContentLoaded', () => {
+
+  // Get all "navbar-burger" elements
+  const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+
+  // Check if there are any navbar burgers
+  if ($navbarBurgers.length > 0) {
+
+    // Add a click event on each of them
+    $navbarBurgers.forEach( el => {
+      el.addEventListener('click', () => {
+
+        // Get the target from the "data-target" attribute
+        const target = el.dataset.target;
+        const $target = document.getElementById(target);
+
+        // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
+        el.classList.toggle('is-active');
+        $target.classList.toggle('is-active');
+
+      });
+    });
+  }
+
+});
+</script>
